--- a/The Tank/Digital Writing.html
+++ b/The Tank/Digital Writing.html
@@ -28,25 +28,22 @@ tw-story {
 tw-link,
 tw-link:link,
 tw-link:visited,
-tw-link.visited {
-  color: #3C3633;         
-  font-weight: bold;     
-  text-decoration: none;  
-}
-
-tw-link[click-append] {
-  color: #3C3633;         
-  font-weight: bold;     
-  text-decoration: none;
-}
-
-tw-link:focus,
 tw-link:hover,
 tw-link:active,
-tw-link.visited:hover {
-  color: #3C3633;         
-  font-weight: bold;
-  text-decoration: none; 
+tw-link.visited,
+tw-link.visited:hover,
+.enchantment-link,
+tw-hook[class*="link"],
+a.enchantment-link {
+  color: #3C3633 !important;
+  font-weight: bold !important;
+  text-decoration: none !important;
+}
+
+/* Targets the internal span that Harlowe sometimes uses */
+tw-link span,
+.enchantment-link span {
+  color: #3C3633 !important;
 }
 
 
@@ -159,20 +156,16 @@ tw-passage {
   margin-right: 2.5rem;
   max-width: 70%;
 }
-/* Adjust these values incrementally for more varied alignment */
 
-/* Add these styles to the bottom of your existing stylesheet */
-/* Grid container to hold all the grid items */
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Auto-fill columns with minimum width */
-  gap: 20px; /* Space between grid items */
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
+  gap: 20px; 
   padding: 20px;
-  height: 100vh; /* Full height of the viewport */
-  box-sizing: border-box; /* Include padding in the total height calculation */
+  height: 100vh; 
+  box-sizing: border-box; 
 }
 
-/* Grid item (image or text) */
 .grid-item {
   display: flex;
   flex-direction: column; /* Stack image and text vertically */
@@ -182,66 +175,149 @@ tw-passage {
   box-sizing: border-box;
 }
 
-/* Style for the images */
 .story-image {
-  width: 100%; /* Make images fill their container */
+  width: 100%; 
   max-width: 100%;
-  max-height: 200px; /* Set a max height for consistency */
-  object-fit: cover; /* Keep aspect ratio and cover the space */
-  border-radius: 10px; /* Optional: rounded corners */
+  max-height: 200px; 
+  object-fit: cover; 
+  border-radius: 10px; 
 }
 
-/* Styling for text */
 .text-item {
   font-family: 'CabrionLight', sans-serif;
   color: #3C3633;
-  text-align: center; /* Center text within the grid item */
+  text-align: center; 
 }
 
 .text-item p {
   font-size: 1rem;
-  margin: 10px 0; /* Space between paragraphs */
+  margin: 10px 0; 
   line-height: 1.5;
 }
 
-/* Adjust grid container for responsive behavior */
 tw-passage {
-  padding-bottom: 200px; /* Extra room for content at the bottom */
-  overflow: auto; /* Allow scrolling if content overflows */
+  padding-bottom: 200px; 
+  overflow: auto; 
 }
 
 tw-story[tags~="background1"] {
   background: url('images/tapestry.jpg') center center / cover no-repeat fixed;
 }
-/* Make sure the container uses flexbox for side-by-side layout */
+
 .image-text-container {
-  display: flex;                /* Align image and text side by side */
-  align-items: flex-start;      /* Align both items at the top */
-  gap: 2rem;                    /* Space between image and text */
+  display: flex;               
+  align-items: flex-start;      
+  gap: 2rem;                    
   padding: 1rem;
   max-width: 90%;
-  margin: 2rem auto;            /* Center the entire container */
-  flex-wrap: nowrap;            /* Prevent wrapping */
+  margin: 2rem auto;            
+  flex-wrap: nowrap;           
 }
 
-/* Increase the size and move the image further left */
 .side-image {
-  width: 600px;                 /* Increase image width */
-  height: auto;                 /* Maintain aspect ratio */
-  object-fit: cover;            /* Ensure the image covers its box */
-  flex-shrink: 0;               /* Prevent image from shrinking */
-  border-radius: 10px;          /* Optional: rounded corners */
-  margin-left: -50px;           /* Move the image further left */
+  width: 350px; 
+  max-width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  flex-shrink: 0;
+  margin-left: -100px; 
+  margin-top: 40px; 
 }
 
-/* Make the text block flexible */
 .text-block {
-  flex: 1;                      /* Allow the text to fill the remaining space */
+  flex: 1;                   
   font-family: 'CabrionLight', sans-serif;
   color: #3C3633;
   line-height: 1.6;
-  text-align: left;             /* Ensure text alignment to the left */
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,250" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
+  text-align: left;            
+}
+.slow-fade-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  animation: slowFadeToBlack 4s forwards;
+  z-index: 9999;
+  pointer-events: none;
+}
+
+@keyframes slowFadeToBlack {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+tw-link[click-append] {
+  color: #3C3633 !important; 
+  font-weight: bold !important; 
+  text-decoration: none !important; 
+}
+
+tw-link[click-append]:hover {
+  color: #3C3633 !important; 
+  text-decoration: none !important; 
+}
+tw-sidebar [role=button] {
+  display: inline-block !important;
+  visibility: visible !important;
+  opacity: 1 !important;
+  color: #3C3633 !important; /* Optional: match your text color */
+}
+.inter-text-image {
+  width: 50%;
+  max-width: 400px;
+  margin: 2rem 0;
+  border-radius: 0; /* No rounded corners */
+  display: block;
+  object-fit: cover;
+  box-shadow: none; /* Remove shadow */
+
+  /* Dynamic layout look */
+  transform: rotate(-1deg);
+}
+
+.inter-text-image:nth-of-type(2n) {
+  align-self: flex-start;
+  margin-left: 3rem;
+  transform: rotate(2deg);
+}
+
+.inter-text-image:nth-of-type(2n+1) {
+  align-self: flex-end;
+  margin-right: 3rem;
+  transform: rotate(-2deg);
+}
+tw-story[tags~="background2"] {
+  background: url('images/sky.jpg') center center / cover no-repeat fixed;
+}
+
+#falling-container {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Full height for scrolling effect */
+}
+.falling-text {
+  position: absolute;
+  font-size: 16px;
+  color: white;
+  opacity: 0;
+  animation: fall 5s infinite;
+}
+
+@keyframes fall {
+  0% {
+    top: -100px;
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    top: 100vh;
+    opacity: 0;
+  }
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
 &lt;/audio&gt;
@@ -256,29 +332,24 @@ It’s late on a Saturday night, too late for you to be awake.
 
 “Alright”, she says.
 
-You and your sister sit up in bed.</tw-passagedata><tw-passagedata pid="2" name="we want your story" tags="" position="600,375" size="100,100">&lt;div class=&quot;image-text-container&quot;&gt;
+You and your sister sit up in bed.</tw-passagedata><tw-passagedata pid="2" name="we want your story" tags="" position="600,225" size="100,100">&lt;div class=&quot;image-text-container&quot;&gt;
   &lt;img src=&quot;images/tank.jpg&quot; alt=&quot;Old water tank&quot; class=&quot;side-image&quot; /&gt;
   &lt;div class=&quot;text-block&quot;&gt;
-    &lt;p&gt;When your Nonna and Nonno first came to Australia they lived inside a water tank with your Mum and older brother. Your Nonno worked on an orange farm picking fruit, and the farmer had no accommodation for them. One day, they saw the farmer throwing an old water tank into hard rubbish, and they asked him if they could save it.&lt;/p&gt;
-
-    &lt;p&gt;The water tank was flipped upside down so the old floor became the new roof, and the new floor was empty, made of dirt. The farmer added a wood-stove so they could cook.&lt;/p&gt;
-
-    &lt;p&gt;They slept on piles of clothes instead of a [[bed]]. Their luggage containing blankets from home was still making its journey across the Pacific and hadn’t yet arrived.&lt;/p&gt;
-
-    &lt;p&gt;No fridge to store food, they only ate shelf-staple food. On the one day your Nonno splashed out and bought meat, your Nonna ruined the dish because she couldn’t read English on the bottle labelled, ‘sweet and sour sauce’.&lt;/p&gt;
+    &lt;p&gt;When your Nonna and Nonno first came to Australia they lived inside a water tank with your Mum and older brother. Your Nonno worked on an orange farm picking fruit, and the farmer had no accommodation for them. One day, they saw the farmer throwing an old water tank into hard rubbish, and [[they asked him if they could save it]].&lt;/p&gt;
   &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="bed" tags="" position="600,500" size="100,100">In your proper bedroom with the slated roof and the insulated walls, you could imagine many places better to live than a water tank.
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="3" name="bed" tags="" position="600,725" size="100,100">In your proper bedroom with the slated roof and the insulated walls, you could imagine many places better to live than a water tank.
 
 The bedroom that could fit the water tank inside of it maybe, 
-(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]</tw-passagedata><tw-passagedata pid="4" name="if you could measure the parameters." tags="" position="600,625" size="100,100">|fadeOut&gt;[&lt;span class=&quot;fade-target&quot;&gt;You walk the parameters of the story, graze your hand on the corrugated iron edges.&lt;/span&gt;]
+(click-append: &quot;maybe,&quot;)[ [[if you could measure the parameters.]] ]</tw-passagedata><tw-passagedata pid="4" name="if you could measure the parameters." tags="" position="600,850" size="100,100">&lt;p&gt;You walk the parameters of the story, graze your hand on the corrugated iron edges.&lt;/p&gt;
 
-(after: 2s)[
-  (enchant: ?fadeOut, (css: &quot;animation: fadeOut 3s ease forwards;&quot;))
+|fade&gt;[ ]
+
+(after: 4s)[
+  (replace: ?fade)[&lt;div class=&quot;slow-fade-screen&quot;&gt;&lt;/div&gt;]
 ]
 
-(after: 7s)[
-  (replace: ?fadeOut)[]
-  (goto: &quot;Next Passage&quot;)
+(after: 10s)[
+  (goto: &quot;arrive in calabria&quot;)
 ]</tw-passagedata><tw-passagedata pid="5" name="Brackets with rotation" tags="" position="300,700" size="100,100">&lt;!-- Brackets with Rotation --&gt;
 &lt;div class=&quot;big-brackets&quot;&gt;
   ( )
@@ -323,14 +394,31 @@ The bedroom that could fit the water tank inside of it maybe,
 
   /* Other styling for image grid, etc. */
 &lt;/style&gt;
-</tw-passagedata><tw-passagedata pid="6" name="Next Passage" tags="background1" position="600,750" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
+</tw-passagedata><tw-passagedata pid="6" name="next passage" tags="" position="600,1225" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
   &lt;div class=&quot;dynamic-text&quot;&gt;
-    &lt;p class=&quot;line line-1&quot;&gt;[[A ring-shaped mosquito bite on your finger greets you in the morning]].&lt;/p&gt;
+    &lt;p class=&quot;line line-1&quot;&gt;[[a ring shaped mosquito bite greets you in the morning]].&lt;/p&gt;
+
+    &lt;img src=&quot;images/cross.jpg&quot; class=&quot;inter-text-image&quot;&gt;
+
     &lt;p class=&quot;line line-2&quot;&gt;She wears a scarf tight around her skull as she washes the dishes.&lt;/p&gt;
-    &lt;p class=&quot;line line-3&quot;&gt;You collect the clean laundry from the balcony rail.&lt;/p&gt;
-    &lt;p class=&quot;line line-4&quot;&gt;Is it the heat or break from idling hands raised above the keyboard in contemplation that makes folding the clothes feel euphoric?&lt;/p&gt;
-    &lt;p class=&quot;line line-5&quot;&gt;The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile causing depressions in the floor.&lt;/p&gt;
-    &lt;p class=&quot;line line-6&quot;&gt;The tile trailing off, somewhere we are supposed to walk.&lt;/p&gt;
+
+    &lt;p class=&quot;line line-3&quot;&gt;The radio hums in the background, a voice talking about the weather in a language you barely understand.&lt;/p&gt;
+
+    &lt;img src=&quot;images/sky.jpg&quot; class=&quot;inter-text-image&quot;&gt;
+
+    &lt;p class=&quot;line line-4&quot;&gt;You collect the clean laundry from the balcony rail.&lt;/p&gt;
+
+    &lt;p class=&quot;line line-5&quot;&gt;The light on your arms is warm. You can smell the eucalyptus in the air, and the detergent in the fabric.&lt;/p&gt;
+
+    &lt;img src=&quot;images/plant.jpg&quot; class=&quot;inter-text-image&quot;&gt;
+
+    &lt;p class=&quot;line line-6&quot;&gt;Folding the clothes feels euphoric.&lt;/p&gt;
+
+    &lt;p class=&quot;line line-7&quot;&gt;The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile.&lt;/p&gt;
+
+    &lt;img src=&quot;images/mum.jpg&quot; class=&quot;inter-text-image&quot;&gt;
+
+    &lt;p class=&quot;line line-8&quot;&gt;The tile trailing off, somewhere you’re supposed to walk.&lt;/p&gt;
   &lt;/div&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="7" name="Untitled Passage" tags="" position="300,900" size="100,100">&lt;tw-passage&gt;
   &lt;div class=&quot;grid-container&quot;&gt;
@@ -356,7 +444,81 @@ The bedroom that could fit the water tank inside of it maybe,
       &lt;p class=&quot;line-2&quot;&gt;It will also adjust based on screen size, making sure everything looks neat.&lt;/p&gt;
     &lt;/div&gt;
   &lt;/div&gt;
-&lt;/tw-passage&gt;</tw-passagedata></tw-storydata>
+&lt;/tw-passage&gt;</tw-passagedata><tw-passagedata pid="8" name="they asked him if they could save it" tags="" position="600,350" size="100,100">&lt;div class=&quot;image-text-container&quot;&gt;
+  &lt;img src=&quot;images/tankfire.jpg&quot; alt=&quot;Old water tank&quot; class=&quot;side-image&quot; /&gt;
+  &lt;div class=&quot;text-block&quot;&gt;
+  &lt;p&gt;The water tank was flipped upside down so the old floor became the new roof, and the new floor was empty, made of dirt. [[The farmer added a wood-stove]] so they could cook.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="9" name="The farmer added a wood-stove" tags="" position="600,475" size="100,100">&lt;div class=&quot;image-text-container&quot;&gt;
+  &lt;img src=&quot;images/tankclothes.jpg&quot; alt=&quot;Old water tank&quot; class=&quot;side-image&quot; /&gt;
+  &lt;div class=&quot;text-block&quot;&gt;
+    &lt;p&gt;[[They slept on piles of clothes instead of a bed]]. Their luggage containing blankets from home was still making its journey across the Pacific and hadn’t yet arrived.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+
+</tw-passagedata><tw-passagedata pid="10" name="They slept on piles of clothes instead of a bed" tags="" position="600,600" size="100,100">|fadeOut&gt;[
+  &lt;div class=&quot;image-text-container fade-target&quot;&gt;
+    &lt;img src=&quot;images/tankbottle.jpg&quot; alt=&quot;Old water tank&quot; class=&quot;side-image&quot; /&gt;
+    &lt;div class=&quot;text-block&quot;&gt;
+      &lt;p&gt;No fridge to store food, they only ate shelf-staple food. On the one day your Nonno splashed out and bought meat, your Nonna ruined the dish because she couldn’t read English on the bottle labelled, ‘sweet and sour sauce&#39;.&lt;/p&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+]
+(after: 4s)[
+  (enchant: ?fadeOut, (css: &quot;animation: fadeOut 3s ease forwards;&quot;))
+]
+
+(after: 8s)[
+  (replace: ?fadeOut)[]
+  (goto: &quot;bed&quot;)
+]
+</tw-passagedata><tw-passagedata pid="11" name="Background image working" tags="" position="300,1050" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
+  &lt;div class=&quot;dynamic-text&quot;&gt;
+    &lt;p class=&quot;line line-1&quot;&gt;A ring-shaped mosquito bite on your finger greets you in the morning.&lt;/p&gt;
+    &lt;p class=&quot;line line-2&quot;&gt;She wears a scarf tight around her skull as she washes the dishes.&lt;/p&gt;
+    &lt;p class=&quot;line line-3&quot;&gt;You collect the clean laundry from the balcony rail.&lt;/p&gt;
+    &lt;p class=&quot;line line-4&quot;&gt;Is it the heat or break from idling hands raised above the keyboard in contemplation that makes folding the clothes feel euphoric?&lt;/p&gt;
+    &lt;p class=&quot;line line-5&quot;&gt;The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile causing depressions in the floor.&lt;/p&gt;
+    &lt;p class=&quot;line line-6&quot;&gt;The tile trailing off, somewhere we are supposed to walk.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="arrive in calabria" tags="background2" position="600,975" size="100,100">&lt;!-- Precompute random X positions and delays for each line --&gt;
+(set: $randomX to (array: (random: 0, 100), (random: 0, 100), (random: 0, 100), (random: 0, 100), (random: 0, 100), (random: 0, 100), (random: 0, 100), (random: 0, 100)))
+(set: $randomDelays to (array: (random: 0, 4), (random: 0, 4), (random: 0, 4), (random: 0, 4), (random: 0, 4), (random: 0, 4), (random: 0, 4), (random: 0, 4)))
+
+&lt;!-- Define the lines of text --&gt;
+(set: $lines to [
+  &quot;On the first night there is vomit.&quot;,
+  &quot;Before the vomit she talks at you in the language you have pretended to understand...&quot;,
+  &quot;The couch is made of wooden pellets, covered in thin foam.&quot;,
+  &quot;Before talk there is sugo and melone and formaggio...&quot;,
+  &quot;You decline. You retract. You are drunk.&quot;,
+  &quot;A woman working in the bar corrects your sentences.&quot;,
+  &quot;You repeat after her. Swirl the words around your mouth...&quot;,
+  &quot;Chew on them, swallow, but they come rising back up.&quot;,
+  &quot;&#39;&#39;Bile tainted with track changes&#39;&#39;&quot;
+])
+
+&lt;!-- Create the falling-text container --&gt;
+&lt;div id=&quot;falling-container&quot;&gt;
+  &lt;!-- Loop through each line --&gt;
+  (for: each _line, _index, ...$lines)[
+    &lt;!-- Get random X position and delay for each line using the index --&gt;
+    (set: _x to $randomX[_index])
+    (set: _delay to $randomDelays[_index])
+    
+    &lt;!-- Create the falling-text span for each line --&gt;
+    &lt;span class=&quot;falling-text&quot; style=&quot;position: absolute; left: calc(10% + 80% * _x); animation-delay: _delay s;&quot;&gt;
+      _line
+    &lt;/span&gt;
+  ]
+&lt;/div&gt;
+</tw-passagedata><tw-passagedata pid="13" name="Bile tainted with track changes" tags="" position="600,1100" size="100,100">[[next passage]]</tw-passagedata><tw-passagedata pid="14" name="a ring shaped mosquito bite greets you in the morning" tags="" position="600,1350" size="100,100"></tw-passagedata><tw-passagedata pid="15" name="falling line" tags="" position="725,975" size="100,100">(set: _text to _args[1])
+(set: _x to _args[2])
+(set: _delay to _args[3])
+
+&lt;span class=&quot;falling-text&quot; style=&quot;--random-x: _x; animation-delay: _delay + s;&quot;&gt;
+  _text
+&lt;/span&gt;</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
