FALLING SNOW IS WORKINGGG

--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -303,7 +303,7 @@ tw-story[tags~="background2"] {
   font-size: 16px;
   color: white;
   opacity: 0;
-  animation: fall 5s infinite;
+  animation: fall 15s infinite; /* Slower fall speed */
 }
 
 @keyframes fall {
