--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -296,6 +296,7 @@ tw-story[tags~="background2"] {
   position: relative;
   width: 100%;
   height: 100vh; /* Full height for scrolling effect */
+  overflow: hidden; /* Hide any overflow outside the container */
 }
 
 .falling-text {
@@ -303,7 +304,8 @@ tw-story[tags~="background2"] {
   font-size: 16px;
   color: white;
   opacity: 0;
-  animation: fall 15s infinite; /* Slower fall speed */
+  animation: fall 60s infinite; /* Slower fall speed */
+  white-space: nowrap;
 }
 
 @keyframes fall {
@@ -482,21 +484,16 @@ The bedroom that could fit the water tank inside of it maybe,
     &lt;p class=&quot;line line-5&quot;&gt;The sun reaches into the story through the splinters. The peeling paint. The half-laid kitchen tile causing depressions in the floor.&lt;/p&gt;
     &lt;p class=&quot;line line-6&quot;&gt;The tile trailing off, somewhere we are supposed to walk.&lt;/p&gt;
   &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="arrive in calabria" tags="background2" position="600,975" size="100,100">&lt;!-- Define the lines of text --&gt;
-(set: $lines to [
-  &quot;On the first night there is vomit.&quot;,
-  &quot;Before the vomit she talks at you in the language you have pretended to understand...&quot;,
-  &quot;The couch is made of wooden pellets, covered in thin foam.&quot;,
-  &quot;Before talk there is sugo and melone and formaggio...&quot;,
-  &quot;You decline. You retract. You are drunk.&quot;,
-  &quot;A woman working in the bar corrects your sentences.&quot;,
-  &quot;You repeat after her. Swirl the words around your mouth...&quot;,
-  &quot;Chew on them, swallow, but they come rising back up.&quot;,
-  &quot;&#39;&#39;Bile tainted with track changes&#39;&#39;&quot;
-])
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="arrive in calabria" tags="background2" position="600,975" size="100,100">&lt;!-- Define the paragraph text --&gt;
+(set: $fallingText to &quot;On the first night there is vomit. Before the vomit she talks at you in the language you have pretended to understand... The couch is made of wooden pellets, covered in thin foam. Before talk there is sugo and melone and formaggio... You decline. You retract. You are drunk. A woman working in the bar corrects your sentences. You repeat after her. Swirl the words around your mouth... Chew on them, swallow, but they come rising back up. &#39;&#39;Bile tainted with track changes&#39;&#39;&quot;)
 
 &lt;!-- Create the falling-text container --&gt;
-&lt;div id=&quot;falling-container&quot;&gt;&lt;/div&gt;
+&lt;div id=&quot;falling-container&quot;&gt;
+  &lt;!-- Apply the falling-text class to the whole paragraph --&gt;
+  &lt;span class=&quot;falling-text&quot;&gt;
+    $fallingText
+  &lt;/span&gt;
+&lt;/div&gt;
 
 &lt;script&gt;
   // Get the lines of text
