--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -303,9 +303,9 @@ tw-story[tags~="background2"] {
   position: absolute;
   font-size: 20px; /* Adjust font size for readability */
   line-height: 1.5;
-  color: white;
+  color: #EEEDEB; /* Set the text color */
   opacity: 0;
-  animation: fall 120s infinite; /* Slow the falling speed even more */
+  animation: fall 120s forwards; /* Make it fall only once, and not repeat */
   white-space: normal; /* Allow wrapping of text */
   padding: 10px; /* Add padding for some space around the text */
 }
@@ -315,14 +315,8 @@ tw-story[tags~="background2"] {
     top: -100px;
     opacity: 0;
   }
-  25% {
-    opacity: 0.5;
-  }
-  50% {
+  5% {
     opacity: 1;
-  }
-  75% {
-    opacity: 0.5;
   }
   100% {
     top: 100vh;
@@ -493,52 +487,25 @@ The bedroom that could fit the water tank inside of it maybe,
     &lt;p class=&quot;line line-6&quot;&gt;The tile trailing off, somewhere we are supposed to walk.&lt;/p&gt;
   &lt;/div&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="12" name="arrive in calabria" tags="background2" position="600,975" size="100,100">&lt;!-- Define the paragraph text --&gt;
-(set: $fallingText to &quot;On the first night there is vomit. Before the vomit she talks at you in the language you have pretended to understand... The couch is made of wooden pellets, covered in thin foam. Before talk there is sugo and melone and formaggio... You decline. You retract. You are drunk. A woman working in the bar corrects your sentences. You repeat after her. Swirl the words around your mouth... Chew on them, swallow, but they come rising back up. &#39;&#39;Bile tainted with track changes&#39;&#39;&quot;)
+(set: $fallingText to &quot;
+  On the first night there is vomit. 
+  Before the vomit she talks at you in the language you have pretended to understand... 
+  The couch is made of wooden pellets, covered in thin foam. 
+  Before talk there is sugo and melone and formaggio... 
+  You decline. You retract. You are drunk. 
+  A woman working in the bar corrects your sentences. 
+  You repeat after her. Swirl the words around your mouth... 
+  Chew on them, swallow, but they come rising back up. 
+  &#39;&#39;Bile tainted with track changes&#39;&#39;
+&quot;)
 
 &lt;!-- Create the falling-text container --&gt;
 &lt;div id=&quot;falling-container&quot;&gt;
   &lt;!-- Apply the falling-text class to the whole paragraph --&gt;
   &lt;span class=&quot;falling-text&quot;&gt;
-    $fallingText
+    (print: $fallingText)
   &lt;/span&gt;
-&lt;/div&gt;
-
-
-&lt;script&gt;
-  // Get the lines of text
-  var lines = [&#39;On the first night there is vomit.&#39;,
-    &#39;Before the vomit she talks at you in the language you have pretended to understand...&#39;,
-    &#39;The couch is made of wooden pellets, covered in thin foam.&#39;,
-    &#39;Before talk there is sugo and melone and formaggio...&#39;,
-    &#39;You decline. You retract. You are drunk.&#39;,
-    &#39;A woman working in the bar corrects your sentences.&#39;,
-    &#39;You repeat after her. Swirl the words around your mouth...&#39;,
-    &#39;Chew on them, swallow, but they come rising back up.&#39;,
-    &quot;&#39;&#39;Bile tainted with track changes&#39;&#39;&quot;
-  ];
-
-  // Container for random positions and delays
-  var randomX = [];
-  var randomDelays = [];
-
-  // Generate random positions and delays
-  for (var i = 0; i &lt; lines.length; i++) {
-    randomX.push(Math.random() * 100);  // Random X between 0 and 100%
-    randomDelays.push(Math.random() * 4); // Random delay between 0 and 4s
-  }
-
-  // Append lines of text with random X positions and delays
-  var container = document.getElementById(&#39;falling-container&#39;);
-  for (var i = 0; i &lt; lines.length; i++) {
-    var span = document.createElement(&#39;span&#39;);
-    span.classList.add(&#39;falling-text&#39;);
-    span.innerText = lines[i];
-    span.style.left = `calc(10% + ${randomX[i]}%)`;
-    span.style.animationDelay = `${randomDelays[i]}s`;
-    container.appendChild(span);
-  }
-&lt;/script&gt;
-</tw-passagedata><tw-passagedata pid="13" name="Bile tainted with track changes" tags="" position="600,1100" size="100,100">[[next passage]]</tw-passagedata><tw-passagedata pid="14" name="a ring shaped mosquito bite greets you in the morning" tags="" position="600,1350" size="100,100"></tw-passagedata><tw-passagedata pid="15" name="falling line" tags="" position="725,975" size="100,100">(set: _text to _args[1])
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="13" name="Bile tainted with track changes" tags="" position="600,1100" size="100,100">[[next passage]]</tw-passagedata><tw-passagedata pid="14" name="a ring shaped mosquito bite greets you in the morning" tags="" position="600,1350" size="100,100"></tw-passagedata><tw-passagedata pid="15" name="falling line" tags="" position="725,975" size="100,100">(set: _text to _args[1])
 (set: _x to _args[2])
 (set: _delay to _args[3])
 
