--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Digital Writing.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Digital Writing" startnode="1" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F9CD24CD-E8CA-4A9F-ADFC-1AFA582C2E95" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@font-face {
+<tw-storydata name="Digital Writing" startnode="16" creator="Twine" creator-version="2.10.0" format="Harlowe" format-version="3.3.9" ifid="F9CD24CD-E8CA-4A9F-ADFC-1AFA582C2E95" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@font-face {
   font-family: 'CabrionLight';
   src: url('fonts/cabrion-light.otf') format('opentype');
   font-weight: normal;
@@ -331,7 +331,25 @@ tw-story[tags~="background2"] {
 #falling-container tw-link:hover {
   color: #FF5733 !important;  /* Change color when hovering */
   text-decoration: underline !important;  /* Underline on hover */
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
+}
+
+tw-story[tags~="background3"] {
+  background: url('images/tablecloth.jpg') center center / cover no-repeat fixed;
+}
+.scrap-img {
+  position: absolute;
+  width: 200px;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  opacity: 0;
+}
+
+.img1 { top: 50px; left: 100px; transform: rotate(-5deg); z-index: 1; }
+.img2 { top: 100px; left: 150px; transform: rotate(8deg); z-index: 2; }
+.img3 { top: 200px; left: 120px; transform: rotate(-10deg); z-index: 3; }
+/* Add as many as you like */
+
+.show { opacity: 1; }
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
 &lt;/audio&gt;
@@ -434,7 +452,7 @@ The bedroom that could fit the water tank inside of it maybe,
 
     &lt;p class=&quot;line line-8&quot;&gt;The tile trailing off, somewhere you’re supposed to walk.&lt;/p&gt;
   &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="7" name="Untitled Passage" tags="" position="300,900" size="100,100">&lt;tw-passage&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="7" name="Untitled Passage" tags="" position="300,850" size="100,100">&lt;tw-passage&gt;
   &lt;div class=&quot;grid-container&quot;&gt;
     &lt;!-- Example Image 1 --&gt;
     &lt;div class=&quot;grid-item image-item&quot;&gt;
@@ -486,7 +504,7 @@ The bedroom that could fit the water tank inside of it maybe,
   (replace: ?fadeOut)[]
   (goto: &quot;bed&quot;)
 ]
-</tw-passagedata><tw-passagedata pid="11" name="Background image working" tags="" position="300,1050" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
+</tw-passagedata><tw-passagedata pid="11" name="Background image working" tags="" position="300,1000" size="100,100">&lt;div class=&quot;big-brackets&quot;&gt;
   &lt;div class=&quot;dynamic-text&quot;&gt;
     &lt;p class=&quot;line line-1&quot;&gt;A ring-shaped mosquito bite on your finger greets you in the morning.&lt;/p&gt;
     &lt;p class=&quot;line line-2&quot;&gt;She wears a scarf tight around her skull as she washes the dishes.&lt;/p&gt;
@@ -521,7 +539,23 @@ The bedroom that could fit the water tank inside of it maybe,
 
 &lt;span class=&quot;falling-text&quot; style=&quot;--random-x: _x; animation-delay: _delay + s;&quot;&gt;
   _text
-&lt;/span&gt;</tw-passagedata></tw-storydata>
+&lt;/span&gt;</tw-passagedata><tw-passagedata pid="16" name="messy table" tags="backgroundimage3" position="300,1125" size="100,100">&lt;img src=&quot;images/mum.jpg&quot; class=&quot;scrap-img img1&quot;&gt;
+
+&lt;!-- Add images with specific classes --&gt;
+&lt;img src=&quot;images/letter.jpg&quot; class=&quot;scrap-img img1&quot;&gt;
+&lt;img src=&quot;images/family.jpg&quot; class=&quot;scrap-img img2&quot;&gt;
+&lt;img src=&quot;images/photo3.png&quot; class=&quot;scrap-img img3&quot;&gt;
+
+&lt;!-- Use a button to progressively show them --&gt;
+(link: &quot;Reveal Next Image&quot;)[
+  (set: $shown to it + 1)
+  (if: $shown &gt;= 1)[(live: 0.1)[(enchant: ?img1, &quot;show&quot;)]]
+  (if: $shown &gt;= 2)[(live: 0.1)[(enchant: ?img2, &quot;show&quot;)]]
+  (if: $shown &gt;= 3)[(live: 0.1)[(enchant: ?img3, &quot;show&quot;)]]
+]
+
+
+</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
