--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -340,10 +340,12 @@ tw-story[tags~="background3"] {
 .scrap-img {
   position: absolute;
   width: 200px;
-  transition: opacity 0.5s ease, transform 0.5s ease;
   opacity: 1;
+  transition: transform 0.5s ease;
+  z-index: 10;
   pointer-events: none;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
+}
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Intro" tags="" position="600,100" size="100,100">&lt;audio id=&quot;background-audio&quot; loop autoplay&gt;
   &lt;source src=&quot;audio/Space8-NalaSinephro.mp3&quot; type=&quot;audio/mpeg&quot;&gt;
   Your browser does not support the audio element.
 &lt;/audio&gt;
@@ -533,23 +535,23 @@ The bedroom that could fit the water tank inside of it maybe,
 
 &lt;span class=&quot;falling-text&quot; style=&quot;--random-x: _x; animation-delay: _delay + s;&quot;&gt;
   _text
-&lt;/span&gt;</tw-passagedata><tw-passagedata pid="16" name="messy table" tags="backgroundimage3" position="300,1125" size="100,100">(set: $imageList to (a: &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;photo3.png&quot;, &quot;ticket.png&quot;, &quot;postcard.jpg&quot;))
+&lt;/span&gt;</tw-passagedata><tw-passagedata pid="16" name="messy table" tags="backgroundimage3" position="300,1125" size="100,100">(set: $imageList to (a: &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;mum.jpg&quot;, &quot;jesus1.jpg&quot;, &quot;maria.jpg&quot;))
 (set: $scrapbook to (a:))
 
-(live: 0.5s)[
+(live: 1s)[
   (if: $imageList&#39;s length &gt; 0)[
     (set: _newImg to $imageList&#39;s 1st)
     (set: $imageList to $imageList&#39;s 2ndToLast)
     (set: $scrapbook to it + (a: _newImg))
+    (set: _x to (random: 0, 80))
+    (set: _y to (random: 0, 80))
+    (set: _r to (random: -30, 30))
+    (append: ?collage)[
+      (raw: &quot;&lt;img src=&#39;images/&quot; + _newImg + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + _y + &quot;%; left:&quot; + _x + &quot;%; transform: rotate(&quot; + _r + &quot;deg);&#39;&gt;&quot;)
+    ]
   ]
 ]
-
-(for: each _img, ...$scrapbook)[
-  (set: _x to (random: 0, 80))
-  (set: _y to (random: 0, 80))
-  (set: _r to (random: -30, 30))
-  &lt;img src=&quot;images/[_img]&quot; class=&quot;scrap-img&quot; style=&quot;top:[_y]%; left:[_x]%; transform: rotate([_r]deg); z-index:(_index);&quot;&gt;
-]
+&lt;div id=&quot;collage&quot; ?collage&gt;&lt;/div&gt;
 </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
