--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -535,23 +535,9 @@ The bedroom that could fit the water tank inside of it maybe,
 
 &lt;span class=&quot;falling-text&quot; style=&quot;--random-x: _x; animation-delay: _delay + s;&quot;&gt;
   _text
-&lt;/span&gt;</tw-passagedata><tw-passagedata pid="16" name="messy table" tags="backgroundimage3" position="300,1125" size="100,100">(set: $imageList to (a: &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;mum.jpg&quot;, &quot;jesus1.jpg&quot;, &quot;maria.jpg&quot;))
-(set: $scrapbook to (a:))
+&lt;/span&gt;</tw-passagedata><tw-passagedata pid="16" name="messy table" tags="backgroundimage3" position="300,1125" size="100,100">(raw: &quot;&lt;img src=&#39;images/letter.jpg&#39; class=&#39;scrap-img&#39; /&gt;&quot;)
 
-(live: 1s)[
-  (if: $imageList&#39;s length &gt; 0)[
-    (set: _newImg to $imageList&#39;s 1st)
-    (set: $imageList to $imageList&#39;s 2ndToLast)
-    (set: $scrapbook to it + (a: _newImg))
-    (set: _x to (random: 0, 80))
-    (set: _y to (random: 0, 80))
-    (set: _r to (random: -30, 30))
-    (append: ?collage)[
-      (raw: &quot;&lt;img src=&#39;images/&quot; + _newImg + &quot;&#39; class=&#39;scrap-img&#39; style=&#39;top:&quot; + _y + &quot;%; left:&quot; + _x + &quot;%; transform: rotate(&quot; + _r + &quot;deg);&#39;&gt;&quot;)
-    ]
-  ]
-]
-&lt;div id=&quot;collage&quot; ?collage&gt;&lt;/div&gt;
+
 </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
